[project]
name = "Health_Comodities_Analytics"
version = "0.1.0"
description = "Health_Comodities_Analytics"
authors = ["Sharon Tonui"]
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "streamlit"
]

[project.scripts]
start = "streamlit run App/main.py --server.port $PORT --server.address 0.0.0.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
